--- a/portfolio.html
+++ b/portfolio.html
@@ -7,21 +7,286 @@
     <link rel="stylesheet" href="./portfolio.css" />
   </head>
   <body>
-    <!--header text-->
-    <div class="heading">
-      <!-- heading text -->
-      <div class="heading-text">
-        <h2>adamkeyes</h2>
-      </div>
-      <!--heading logo -->
+    <div class="main-container">
+      <!--header text-->
+      <div class="heading">
+        <!-- heading text -->
+        <div class="heading-text">
+          <p>adamkeyes</p>
+        </div>
+        <!--heading logo -->
         <div class="heading-logo">
-          <img src="./portfolio assests/images/facebookicon.png" alt="" />
+          <div>
+            <img src="./portfolio assests/images/facebook.png" alt="" />
+          </div>
+          <div>
+            <img src="./portfolio assests/images/github.png" alt="" />
+          </div>
+          <div>
+            <img src="./portfolio assests/images/gmail.png" alt="" />
+          </div>
+          <div>
+            <img src="./portfolio assests/images/linkedin.png" alt="" />
+          </div>
+        </div>
+      </div>
+      <!-- -->
+      <div class="basic-info">
+        <div class="container2-text">
+          <h1 class="welcome-text">
+            Nice to meet you! <br />
+            I'm <u> Adam Keyes</u>.
+          </h1>
+          <p class="self-intro">
+            Based in the UK, I'm a front-end developer passionate about building
+            accessible web apps that users love
+          </p>
+          <div class="con">
+            <a href="#">Contact</a>
+          </div>
+        </div>
+
+        <!-- -->
+        <div class="container2-img">
+          <div>
+            <img
+              src="./portfolio assests/images/image-profile-desktop.webp"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="subjects">
+        <!--subjects div-->
+        <div class="subject">
+          <h4>HTML</h4>
+          <h6>4 Years Experience</h6>
+        </div>
+        <div class="subject">
+          <h4>CSS</h4>
+          <h6>4 Years Experience</h6>
+        </div>
+        <div class="subject">
+          <h4>Javascript</h4>
+          <h6>4 Years Experience</h6>
+        </div>
+        <div class="subject">
+          <h4>Accessibility</h4>
+          <h6>4 Years Experience</h6>
+        </div>
+        <div class="subject">
+          <h4>React</h4>
+          <h6>3 Years Experience</h6>
+        </div>
+        <div class="subject">
+          <h4>Sass</h4>
+          <h6>3 Years Experience</h6>
+        </div>
+      </div>
+      <div class="projects-container">
+        <div class="projects-head">
+          <h2>Projects</h2>
+          <p>CONTACT ME</p>
+        </div>
+        <!-- ......... project info boxes --1 -->
+        <div class="project-info">
+          <!-- projects content boxes-->
+          <div class="project-details">
+            <!--image container-->
+            <div class="pic">
+              <img
+                src="./portfolio assests/images/thumbnail-project-1-large.webp"
+                alt=""
+              />
+            </div>
+            <!-- project title container-->
+            <div class="title">
+              <h6>design portfolio</h6>
+            </div>
+            <!--project language container-->
+            <div class="language">
+              <h5>HTML</h5>
+              <h5>CSS</h5>
+            </div>
+            <!-- view container-->
+            <div class="view">
+              <h5>VIEW PROJECT</h5>
+              <h5>VIEW CODE</h5>
+            </div>
+          </div>
+          <!--second........box......-->
+          <div class="project-details">
+            <!--image container-->
+            <div class="pic">
+              <img
+                src="./portfolio assests/images/thumbnail-project-2-large.webp"
+                alt=""
+              />
+            </div>
+            <!-- project title container-->
+            <div class="title">
+              <h6>E-learning landing page</h6>
+            </div>
+            <!--project language container-->
+            <div class="language">
+              <h5>HTML</h5>
+              <h5>CSS</h5>
+            </div>
+            <!-- view container-->
+            <div class="view">
+              <h5>VIEW PROJECT</h5>
+              <h5>VIEW CODE</h5>
+            </div>
+          </div>
+          <!--......third.....box......-->
+          <div class="project-details">
+            <!--image container-->
+            <div class="pic">
+              <img
+                src="./portfolio assests/images/thumbnail-project-3-large.webp"
+                alt=""
+              />
+            </div>
+            <!-- project title container-->
+            <div class="title">
+              <h6>TODO WEB APP</h6>
+            </div>
+            <!--project language container-->
+            <div class="language">
+              <h5>HTML</h5>
+              <h5>CSS</h5>
+              <h5>JAVASCRIPT</h5>
+            </div>
+            <!-- view container-->
+            <div class="view">
+              <h5>VIEW PROJECT</h5>
+              <h5>VIEW CODE</h5>
+            </div>
+          </div>
+          <!--.......fourth....box.....-->
+          <div class="project-details">
+            <!--image container-->
+            <div class="pic">
+              <img
+                src="./portfolio assests/images/thumbnail-project-4-large.webp"
+                alt=""
+              />
+            </div>
+            <!-- project title container-->
+            <div class="title">
+              <h6>ENTERTAINMENT WEB APP</h6>
+            </div>
+            <!--project language container-->
+            <div class="language">
+              <h5>HTML</h5>
+              <h5>CSS</h5>
+              <h5>JAVASCRIPT</h5>
+            </div>
+            <!-- view container-->
+            <div class="view">
+              <h5>VIEW PROJECT</h5>
+              <h5>VIEW CODE</h5>
+            </div>
+          </div>
+          <!-- .........fifth.....box......-->
+          <div class="project-details">
+            <!--image container-->
+            <div class="pic">
+              <img
+                src="./portfolio assests/images/thumbnail-project-5-large.webp"
+                alt=""
+              />
+            </div>
+            <!-- project title container-->
+            <div class="title">
+              <h6>MEMORY GAME</h6>
+            </div>
+            <!--project language container-->
+            <div class="language">
+              <h5>HTML</h5>
+              <h5>CSS</h5>
+              <h5>JAVASCRIPT</h5>
+            </div>
+            <!-- view container-->
+            <div class="view">
+              <h5>VIEW PROJECT</h5>
+              <h5>VIEW CODE</h5>
+            </div>
+          </div>
+          <!--.......sixth....box........-->
+          <div class="project-details">
+            <!--image container-->
+            <div class="pic">
+              <img
+                src="./portfolio assests/images/thumbnail-project-6-large.webp"
+                alt=""
+              />
+            </div>
+            <!-- project title container-->
+            <div class="title">
+              <h6>ART GALLERY SHOWCASE</h6>
+            </div>
+            <!--project language container-->
+            <div class="language">
+              <h5>HTML</h5>
+              <h5>CSS</h5>
+              <h5>JAVASCRIPT</h5>
+            </div>
+            <!-- view container-->
+            <div class="view">
+              <h5>VIEW PROJECT</h5>
+              <h5>VIEW CODE</h5>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <!-- -->
-    <div>
-      
-    </div>
+    <footer class="page-foot">
+      <div class="footer-container">
+        <div class="contact-details">
+          <h4>Contact</h4>
+          <p>
+            I would love to hear about your project and how I could help. Please
+            fill in the form, and I’ll get back to you as soon as possible.
+          </p>
+        </div>
+        <div class="sender-details">
+          <p>NAME</p>
+          <hr />
+          <p>EMAIL</p>
+          <hr />
+          <p class="mesg">MESSAGE</p>
+          <hr />
+        </div>
+      </div>
+      <div class="foot-a">
+        <div>
+          <a href="#">SEND MESSAGE</a>
+        </div>
+      </div>
+      <hr />
+      <div class="heading">
+        <!-- heading text -->
+        <div class="heading-text">
+          <p>adamkeyes</p>
+        </div>
+        <!--heading logo -->
+        <div class="heading-logo">
+          <div>
+            <img src="./portfolio assests/images/facebook.png" alt="" />
+          </div>
+          <div>
+            <img src="./portfolio assests/images/github.png" alt="" />
+          </div>
+          <div>
+            <img src="./portfolio assests/images/gmail.png" alt="" />
+          </div>
+          <div>
+            <img src="./portfolio assests/images/linkedin.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
